<resources>
    <string name="app_name">YourDailyProject</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="first_name">first Name</string>
    <string name="last_name">last Name</string>
    <string name="phone_number">phone number</string>
    <string name="email">email</string>

    <string name="next">next</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="gender">gender</string>
    <string name="age">age</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="done">Done</string>
    <string name="a">a</string>
    <string name="yourdaily">yourdaily</string>
    <string name="textview">textview</string>
    <string name="your_program">your program</string>
    <string name="target">target</string>
    <string name="cutting">cutting</string>
    <string name="nautral">nautral</string>
    <string name="bulking">bulking</string>
    <string name="_0">0</string>
    <string name="exersice">Exersice</string>
    <string name="_1">1</string>
    <string name="calories">calories</string>
    <string name="minutes">minutes</string>
    <string name="calculate">calculate</string>
    <string name="add">Add</string>
    <string name="food">Food</string>
    <string name="grams">grams</string>
    <string name="change_target">change target</string>
    <string name="change_parameters">change parameters</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="choose_your_target">Choose Your Target</string>
    <string name="unplanned_food">Unplanned Food</string>
    <string name="update">Update</string>

    <string name="height_meters">height (meters)</string>
    <string name="exit">Exit</string>
    <string name="your_current_calories">your current calories</string>
    <string name="foodlist">food</string>


</resources>
