<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebookblue"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/button14"
        android:layout_width="152dp"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/mybutton"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginTop="155dp"
        android:text="@string/change_target" />

    <Button
        android:id="@+id/button15"
        android:layout_width="152dp"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/mybutton"
        android:layout_alignParentTop="true"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="251dp"
        android:text="@string/change_parameters" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="137dp"
        android:layout_marginTop="45dp"
        android:text="@string/settings"
        android:textSize="36sp" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/mybutton"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="634dp"
        android:text="@string/back" />
</RelativeLayout>