<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebookblue"
    tools:context=".MainPage">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="133dp"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="126dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="229dp"
        android:layout_height="147dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="31dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:fontFamily="cursive"
        android:text="@string/yourdaily"
        android:textSize="56sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:background="@drawable/mybutton"
        android:layout_marginTop="618dp"
        android:text="@string/exit"
        tools:text="exit" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="187dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="134dp"
        android:layout_height="125dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="59dp"

        android:layout_marginLeft="59dp"
        android:layout_marginTop="303dp"
        android:background="@drawable/my_bt"
        android:drawableTop="@drawable/foodmenu"
        android:text="@string/your_program"
        android:visibility="visible" />

    <Button
        android:id="@+id/button10"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="134dp"
        android:layout_height="125dp"
        android:background="@drawable/my_bt"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="446dp"
        android:drawableTop="@drawable/fastfoodmenu"
        android:text="@string/unplanned_food"

        tools:text="Unplanned Food" />

    <Button
        android:id="@+id/button13"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="134dp"
        android:layout_height="125dp"
        android:background="@drawable/my_bt"

        android:layout_alignParentStart="true"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="229dp"
        android:layout_marginLeft="229dp"
        android:layout_marginTop="450dp"
        android:drawableTop="@drawable/settings"
        android:text="@string/settings"
        tools:text="Settings" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="253dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginLeft="253dp"
        android:layout_marginTop="236dp"
        android:text="@string/_0" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="134dp"
        android:layout_height="129dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/my_bt"

        android:layout_marginStart="227dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginLeft="227dp"
        android:layout_marginTop="303dp"
        android:drawableTop="@drawable/exersice"
        android:text="@string/exersice" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="235dp"
        android:text="@string/your_current_calories" />

</RelativeLayout>